changed name to klikr